REWIND-119: fixed creating group, swagger
